src/tui/widgets/snapshots/ralph_wiggum__tui__widgets__output_view__tests__snapshot_auto_follow_with_block.snap
---
source: src/tui/widgets/output_view.rs
expression: snapshot
---
┌ Output ──────────────────────────────┐
│Line 4                                │
│Line 5                                │
│Line 6                                │
│Line 7                                │
│Line 8                                │
└──────────────────────────────────────┘
