src/tui/widgets/snapshots/ralph_wiggum__tui__widgets__output_view__tests__snapshot_empty_buffer_with_block.snap
---
source: src/tui/widgets/output_view.rs
expression: snapshot
---
┌ Empty ───────────────────────────────┐
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
