src/tui/widgets/snapshots/ralph_wiggum__tui__widgets__output_view__tests__snapshot_manual_scroll_to_top.snap
---
source: src/tui/widgets/output_view.rs
expression: snapshot
---
Line 1
Line 2
Line 3
Line 4
Line 5
