src/tui/widgets/snapshots/ralph_wiggum__tui__widgets__output_view__tests__snapshot_manual_scroll_up.snap
---
source: src/tui/widgets/output_view.rs
expression: snapshot
---
Line 3
Line 4
Line 5
Line 6
Line 7
