src/tui/widgets/snapshots/ralph_wiggum__tui__widgets__output_view__tests__snapshot_overflow_scroll_clamped.snap
---
source: src/tui/widgets/output_view.rs
expression: snapshot
---
Line 16
Line 17
Line 18
Line 19
Line 20
