src/tui/widgets/snapshots/ralph_wiggum__tui__widgets__output_view__tests__snapshot_visual_wrapping.snap
---
source: src/tui/widgets/output_view.rs
expression: snapshot
---
Short
XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
End
