src/tui/widgets/snapshots/ralph_wiggum__tui__widgets__output_view__tests__snapshot_visual_wrapping_scroll_up.snap
---
source: src/tui/widgets/output_view.rs
expression: snapshot
---
First
Second
LLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLL
LLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLL
